src/parser/TSmmParser.java
// Generated from C:/Users/David/OneDrive - Universidad de Oviedo/Escritorio/UNI/Tercer Curso/Segundo Semestre/Diseño de Lenguajes de Programación/dlp/src/parser/TSmm.g4 by ANTLR 4.13.2
package parser;

import ast.*;
import ast.definitions.*;
import ast.expressions.*;
import ast.statements.*;
import ast.types.*;
import java.util.*;
import parser.LexerHelper;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class TSmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, INT_CONSTANT=40, ID=41, SINGLE_COMMENT=42, MULTI_COMMENT=43, 
		CHAR_CONSTANT=44, REAL_CONSTANT=45, WHITE_SPACE=46, SALTO_LINEA=47, TABULADOR=48, 
		RETORNO_CARRO=49;
	public static final int
		RULE_program = 0, RULE_varDefinition = 1, RULE_functionDefinition = 2, 
		RULE_mainFunction = 3, RULE_type = 4, RULE_simpleType = 5, RULE_statement = 6, 
		RULE_block = 7, RULE_functionInvocation = 8, RULE_expression = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "varDefinition", "functionDefinition", "mainFunction", "type", 
			"simpleType", "statement", "block", "functionInvocation", "expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'let'", "','", "':'", "';'", "'function'", "'('", "')'", "'void'", 
			"'{'", "'}'", "'main'", "'['", "']'", "'int'", "'number'", "'char'", 
			"'log'", "'input'", "'='", "'if'", "'else'", "'while'", "'return'", "'.'", 
			"'as'", "'-'", "'!'", "'*'", "'/'", "'%'", "'+'", "'>'", "'>='", "'<'", 
			"'<='", "'!='", "'=='", "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "INT_CONSTANT", "ID", "SINGLE_COMMENT", "MULTI_COMMENT", 
			"CHAR_CONSTANT", "REAL_CONSTANT", "WHITE_SPACE", "SALTO_LINEA", "TABULADOR", 
			"RETORNO_CARRO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TSmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TSmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public List<Definition> definitions = new ArrayList<Definition>();
		public VarDefinitionContext varDefinition;
		public FunctionDefinitionContext functionDefinition;
		public MainFunctionContext mainFunction;
		public MainFunctionContext mainFunction() {
			return getRuleContext(MainFunctionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(TSmmParser.EOF, 0); }
		public List<VarDefinitionContext> varDefinition() {
			return getRuleContexts(VarDefinitionContext.class);
		}
		public VarDefinitionContext varDefinition(int i) {
			return getRuleContext(VarDefinitionContext.class,i);
		}
		public List<FunctionDefinitionContext> functionDefinition() {
			return getRuleContexts(FunctionDefinitionContext.class);
		}
		public FunctionDefinitionContext functionDefinition(int i) {
			return getRuleContext(FunctionDefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TSmmListener ) ((TSmmListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TSmmListener ) ((TSmmListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TSmmVisitor ) return ((TSmmVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(26);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case T__0:
						{
						{
						setState(20);
						((ProgramContext)_localctx).varDefinition = varDefinition();
						_localctx.definitions.addAll(((ProgramContext)_localctx).varDefinition.ast);
						}
						}
						break;
					case T__4:
						{
						{
						setState(23);
						((ProgramContext)_localctx).functionDefinition = functionDefinition();
						_localctx.definitions.add(((ProgramContext)_localctx).functionDefinition.ast);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(30);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(31);
			((ProgramContext)_localctx).mainFunction = mainFunction();
			_localctx.definitions.add(((ProgramContext)_localctx).mainFunction.ast);
			setState(33);
			match(EOF);
			((ProgramContext)_localctx).ast = new Program(_localctx.definitions);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDefinitionContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<>();
		public List<String> ids = new ArrayList<>();
		public Token P1;
		public Token PX;
		public TypeContext type;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(TSmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TSmmParser.ID, i);
		}
		public VarDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TSmmListener ) ((TSmmListener)listener).enterVarDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TSmmListener ) ((TSmmListener)listener).exitVarDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TSmmVisitor ) return ((TSmmVisitor<? extends T>)visitor).visitVarDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDefinitionContext varDefinition() throws RecognitionException {
		VarDefinitionContext _localctx = new VarDefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_varDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(T__0);
			setState(37);
			((VarDefinitionContext)_localctx).P1 = match(ID);
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(38);
				match(T__1);
				setState(39);
				((VarDefinitionContext)_localctx).PX = match(ID);
				_localctx.ids.add((((VarDefinitionContext)_localctx).PX!=null?((VarDefinitionContext)_localctx).PX.getText():null));
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(46);
			match(T__2);
			setState(47);
			((VarDefinitionContext)_localctx).type = type();
			setState(48);
			match(T__3);
			_localctx.ast.add(new VarDefinition(((VarDefinitionContext)_localctx).P1.getLine(), ((VarDefinitionContext)_localctx).P1.getCharPositionInLine()+1, (((VarDefinitionContext)_localctx).P1!=null?((VarDefinitionContext)_localctx).P1.getText():null), ((VarDefinitionContext)_localctx).type.ast)); _localctx.ids.forEach(id -> _localctx.ast.add(new VarDefinition(((VarDefinitionContext)_localctx).P1.getLine(), ((VarDefinitionContext)_localctx).P1.getCharPositionInLine()+1, id, ((VarDefinitionContext)_localctx).type.ast)));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDefinitionContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public List<VarDefinition> args = new ArrayList<>();
		public List<Statement> body = new ArrayList<>();
		public Type t;
		public Token NAME;
		public Token P1;
		public TypeContext t1;
		public Token PX;
		public TypeContext tx;
		public SimpleTypeContext simpleType;
		public VarDefinitionContext varDefinition;
		public StatementContext statement;
		public List<TerminalNode> ID() { return getTokens(TSmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TSmmParser.ID, i);
		}
		public List<VarDefinitionContext> varDefinition() {
			return getRuleContexts(VarDefinitionContext.class);
		}
		public VarDefinitionContext varDefinition(int i) {
			return getRuleContext(VarDefinitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public SimpleTypeContext simpleType() {
			return getRuleContext(SimpleTypeContext.class,0);
		}
		public FunctionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TSmmListener ) ((TSmmListener)listener).enterFunctionDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TSmmListener ) ((TSmmListener)listener).exitFunctionDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TSmmVisitor ) return ((TSmmVisitor<? extends T>)visitor).visitFunctionDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDefinitionContext functionDefinition() throws RecognitionException {
		FunctionDefinitionContext _localctx = new FunctionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functionDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(T__4);
			setState(52);
			((FunctionDefinitionContext)_localctx).NAME = match(ID);
			setState(53);
			match(T__5);
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(54);
				((FunctionDefinitionContext)_localctx).P1 = match(ID);
				setState(55);
				match(T__2);
				setState(56);
				((FunctionDefinitionContext)_localctx).t1 = type();
				_localctx.args.add(new VarDefinition(((FunctionDefinitionContext)_localctx).P1.getLine(), ((FunctionDefinitionContext)_localctx).P1.getCharPositionInLine()+1, (((FunctionDefinitionContext)_localctx).P1!=null?((FunctionDefinitionContext)_localctx).P1.getText():null), ((FunctionDefinitionContext)_localctx).t1.ast));
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(58);
					match(T__1);
					setState(59);
					((FunctionDefinitionContext)_localctx).PX = match(ID);
					setState(60);
					match(T__2);
					setState(61);
					((FunctionDefinitionContext)_localctx).tx = type();
					_localctx.args.add(new VarDefinition(((FunctionDefinitionContext)_localctx).PX.getLine(), ((FunctionDefinitionContext)_localctx).PX.getCharPositionInLine()+1, (((FunctionDefinitionContext)_localctx).PX!=null?((FunctionDefinitionContext)_localctx).PX.getText():null), ((FunctionDefinitionContext)_localctx).tx.ast));
					}
					}
					setState(68);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(71);
			match(T__6);
			setState(72);
			match(T__2);
			setState(78);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__13:
			case T__14:
			case T__15:
				{
				{
				setState(73);
				((FunctionDefinitionContext)_localctx).simpleType = simpleType();
				((FunctionDefinitionContext)_localctx).t =  ((FunctionDefinitionContext)_localctx).simpleType.ast;
				}
				}
				break;
			case T__7:
				{
				{
				setState(76);
				match(T__7);
				((FunctionDefinitionContext)_localctx).t =  VoidType.type;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(80);
			match(T__8);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(81);
				((FunctionDefinitionContext)_localctx).varDefinition = varDefinition();
				_localctx.body.addAll(((FunctionDefinitionContext)_localctx).varDefinition.ast);
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 56075308367936L) != 0)) {
				{
				{
				setState(89);
				((FunctionDefinitionContext)_localctx).statement = statement();
				_localctx.body.addAll(((FunctionDefinitionContext)_localctx).statement.ast);
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(97);
			match(T__9);
			((FunctionDefinitionContext)_localctx).ast =  new FunctionDefinition(((FunctionDefinitionContext)_localctx).NAME.getLine(), ((FunctionDefinitionContext)_localctx).NAME.getCharPositionInLine()+1,new FunctionType(_localctx.t, _localctx.args), (((FunctionDefinitionContext)_localctx).NAME!=null?((FunctionDefinitionContext)_localctx).NAME.getText():null), _localctx.body);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainFunctionContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public List<Statement> st = new ArrayList<>();;
		public Token P;
		public VarDefinitionContext varDefinition;
		public StatementContext statement;
		public List<VarDefinitionContext> varDefinition() {
			return getRuleContexts(VarDefinitionContext.class);
		}
		public VarDefinitionContext varDefinition(int i) {
			return getRuleContext(VarDefinitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MainFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TSmmListener ) ((TSmmListener)listener).enterMainFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TSmmListener ) ((TSmmListener)listener).exitMainFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TSmmVisitor ) return ((TSmmVisitor<? extends T>)visitor).visitMainFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainFunctionContext mainFunction() throws RecognitionException {
		MainFunctionContext _localctx = new MainFunctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mainFunction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(T__4);
			setState(101);
			((MainFunctionContext)_localctx).P = match(T__10);
			setState(102);
			match(T__5);
			setState(103);
			match(T__6);
			setState(104);
			match(T__2);
			setState(105);
			match(T__7);
			setState(106);
			match(T__8);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(107);
				((MainFunctionContext)_localctx).varDefinition = varDefinition();
				_localctx.st.addAll(((MainFunctionContext)_localctx).varDefinition.ast);
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 56075308367936L) != 0)) {
				{
				{
				setState(115);
				((MainFunctionContext)_localctx).statement = statement();
				_localctx.st.addAll(((MainFunctionContext)_localctx).statement.ast);
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(123);
			match(T__9);
			((MainFunctionContext)_localctx).ast = new FunctionDefinition(((MainFunctionContext)_localctx).P.getLine(), ((MainFunctionContext)_localctx).P.getCharPositionInLine()+1, new FunctionType(VoidType.type, new ArrayList<VarDefinition>()), "main", _localctx.st);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public Type ast;
		public List<RecordField> fields = new ArrayList<>();;
		public SimpleTypeContext simpleType;
		public Token INT_CONSTANT;
		public TypeContext type;
		public VarDefinitionContext varDefinition;
		public SimpleTypeContext simpleType() {
			return getRuleContext(SimpleTypeContext.class,0);
		}
		public TerminalNode INT_CONSTANT() { return getToken(TSmmParser.INT_CONSTANT, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<VarDefinitionContext> varDefinition() {
			return getRuleContexts(VarDefinitionContext.class);
		}
		public VarDefinitionContext varDefinition(int i) {
			return getRuleContext(VarDefinitionContext.class,i);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TSmmListener ) ((TSmmListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TSmmListener ) ((TSmmListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TSmmVisitor ) return ((TSmmVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		int _la;
		try {
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				((TypeContext)_localctx).simpleType = simpleType();
				((TypeContext)_localctx).ast = ((TypeContext)_localctx).simpleType.ast;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				match(T__11);
				setState(130);
				((TypeContext)_localctx).INT_CONSTANT = match(INT_CONSTANT);
				setState(131);
				match(T__12);
				setState(132);
				((TypeContext)_localctx).type = type();
				((TypeContext)_localctx).ast = new ArrayType(((TypeContext)_localctx).type.ast, LexerHelper.lexemeToInt((((TypeContext)_localctx).INT_CONSTANT!=null?((TypeContext)_localctx).INT_CONSTANT.getText():null)));
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(135);
				match(T__11);
				setState(139); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(136);
					((TypeContext)_localctx).varDefinition = varDefinition();
					((TypeContext)_localctx).varDefinition.ast.forEach(varDef -> {
					        if(_localctx.fields.stream().anyMatch(field -> field.getName().equals(varDef.getName()))){
					            _localctx.fields.add(new RecordField(varDef.getLine(), varDef.getColumn(), varDef.getName(), new ErrorType("Error: duplicated field",varDef)));
					        }
					        else{
					            _localctx.fields.add(new RecordField(varDef.getLine(), varDef.getColumn(), varDef.getName(), varDef.getType()));
					        }
					        });
					    
					}
					}
					setState(141); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__0 );
				setState(143);
				match(T__12);
				((TypeContext)_localctx).ast =  new RecordType(_localctx.fields);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
